# rhombic

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  chat.js  index.html  pyproject.toml  rhombi-corpus.yaml  style.css
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
docs/: API_REFERENCE.md  EXP3_EXPANDED_PLAN.md  EXPERIMENTAL_LADDER.md  EXPERIMENT_TRACKER.md  EXTERNAL_REFERENCE_IMPLEMENTATIONS.md  HACKATHON_SPRINT_PLAN.md  KARKADA_EVALUATION.md  LEARNINGS.md  LITERATURE_REVIEW.md  MINTA_WALKTHROUGH.md  PAPER3_RESEARCH_PLAN.md  RESEARCH_PROGRAM.md  ROADMAP_VISUAL.md  THESIS.md  competitive_landscape.md  gradient_analysis.md  paper3_abstract_draft.md  paper3_channel_ablation_section.md  paper3_section4_outline.md
hermes-tools/: rhombic-context.md  rhombic_tools.py
paper/: COMPREHENSIVE_EXPERIMENT_TABLE.md  DRAFT_SCALE_INVARIANCE_SECTION.md  EXPERIMENT_QUEUE.md  PAPER3_DRAFT_COMBINED.md  PAPER3_OUTLINE.md  PAPER3_UPDATE_NOTES.md  README.md  refs-paper3.bib  rhombic-paper2.bbl  rhombic-paper2.bib  rhombic-paper2.tex  rhombic-paper2_IT.bbl  rhombic-paper2_IT.tex  rhombic-paper3.bbl  rhombic-paper3.bib  rhombic-paper3.tex  rhombic-paper3_IT.tex  rhombic.bbl  rhombic.bib  rhombic.tex  rhombic_IT.tex
results/: BRIDGE_BLOCK_DIAGONAL_FINDING.md  BRIDGE_STRUCTURE_ANALYSIS.md  EXPERIMENT_TRACKER.md  SYNTHESIS.md  VERIFIED_FINDINGS_2026_03_12.md
rhombic/: __init__.py  __main__.py  assignment.py  benchmark.py  context.py  corpus.py  lattice.py  polyhedron.py  signal.py  spatial.py  spectral.py  visualize.py
scripts/: analyze_cybernetic.py  assemble_autonomous.py  capture_hermes.py  generate_banner.py  generate_paper3_figures.py  generate_paper_figures.py  generate_roadmap.py  generate_rung2_dashboard.py  generate_rung4_dashboard.py  generate_title_cards.py  holly_pod_setup.sh  plot_cybernetic_trajectory.py  plot_experimental_arc.py  plot_overfitting_dashboard.py  render_demo_production.py  render_terminal_video.py  run_experiments.py  submission_materials.md  train_comparison.py  train_contrastive_bridge.py  train_cybernetic.py  train_separate_lr.py  video_script.md
space/: README.md  app.py
tests/: test_assignment.py  test_benchmark.py  test_context.py  test_corpus.py  test_lattice.py  (+4 more)
(+261 files in other folders)
