[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhombic"
version = "0.1.0"
description = "Lattice topology benchmarks: what happens when you replace the cube"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "networkx>=3.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
dev = ["pytest>=7.0"]
all = ["rhombic[viz]", "rhombic[dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
